fix: settings cut short when no items

--- a/packages/tv-ui/src/hooks/useViewportRotate.css
+++ b/packages/tv-ui/src/hooks/useViewportRotate.css
@@ -14,6 +14,10 @@ html {
   scroll-behavior: auto;
   container: viewport/size;
 
+  body {
+    min-height: calc(100 * var(--y-unit-large));
+  }
+
   &.force-landscape {
     /*
     When in force landscape mode it shouldn't be possible to scroll up and down
