--- a/packages/tv-ui/src/styles/globals.scss
+++ b/packages/tv-ui/src/styles/globals.scss
@@ -35,6 +35,10 @@ html:has(dialog[open]) {
   }
 }
 
+.ErrorMessage {
+  margin: 1em;
+}
+
 /* -------------------------------------------------------------------------- */
 /*                                  Utilities                                 */
 /* -------------------------------------------------------------------------- */
